--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -19,19 +19,25 @@ html{
     color: #fff;
     text-transform: uppercase;
 }
+
+.btn.save{top: 29px;
+    position: absolute;
+    padding: 30px 15px;
+  }
+
+.btn.remove{
+
+}
+
 #container{
     max-width: 800px;
     margin: 0 auto
 }
-#search input{
-    border: 1px solid #000;
-    padding: 10px;
-    width: 100%;
-}
+
 #add input{
     border: 1px solid #000;
     padding: 10px;
-    width: 100%;
+    width: 91%;
 }
 #tasks{
     list-style: none inside;
@@ -42,24 +48,22 @@ html{
     padding: 10px;
     background: #eee;
     overflow: hidden;
+    border-bottom: 1px solid #c8c8c8;
 }
 #tasks .task{
     width: 100%;
     display: block;
     margin-bottom: 10px;
 }
-#tasks .actions{
-    text-transform: uppercase;
-    width: 100%;
-    display: block;
-    text-align: right;
+
+.title:before{
+  content:'Title: ';
+      font-weight: 600;
+  text-transform: uppercase;
 }
-#tasks .actions input[type=checkbox]{
-    margin-left: 10px;
-}
-#tasks .completed{
-    text-decoration: line-through;
-}
-#tasks .important{
-    color: red;
+
+.desc:before{
+  content:'Description: ';
+      font-weight: 600;
+  text-transform: uppercase;
 }
